# shanyraq_kz

./: README.md  db.sqlite3  manage.py  procfile  pyproject.toml
auth_app/: models.py  serializers.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_user_favorites.py
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_shanyrak_created_at.py
shanyraq1/: asgi.py  settings.py  urls.py  wsgi.py
